--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,11 +6,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  built_collection: ^4.1.0
+  built_value: ^6.3.2
   cupertino_icons: ^0.1.2
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^1.2.8
+  built_value_generator: ^6.3.2
   flutter_test:
     sdk: flutter
 
