--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,15 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  bloc: ^0.10.0
   built_collection: ^4.1.0
   built_value: ^6.3.2
   cupertino_icons: ^0.1.2
   dio: ^2.1.0
+  equatable: ^0.2.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^0.8.0
 
 dev_dependencies:
   build_runner: ^1.2.8
