--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^0.9.0
+  rxdart: ^0.21.0
 
 dev_dependencies:
   build_runner: ^1.3.1
