--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^0.2.3
   flutter:
     sdk: flutter
+  flutter_advanced_networkimage: ^0.4.15
   flutter_bloc: ^0.9.0
   rxdart: ^0.21.0
 
