--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,23 +7,23 @@ environment:
 
 dependencies:
   bloc: ^0.13.0
-  built_collection: ^4.2.0
-  built_value: ^6.4.0
+  built_collection: ^4.2.1
+  built_value: ^6.5.0
   cupertino_icons: ^0.1.2
   dio: ^2.1.3
   equatable: ^0.2.3
   flutter:
     sdk: flutter
-  flutter_advanced_networkimage: ^0.5.0-alpha.3
+  flutter_advanced_networkimage: ^0.4.15
   flutter_bloc: ^0.13.0
   rxdart: ^0.22.0
 
 dev_dependencies:
-  build_runner: ^1.3.3
-  built_value_generator: ^6.4.0
+  build_runner: ^1.4.0
+  built_value_generator: ^6.5.0
   flutter_test:
     sdk: flutter
-  test: ^1.6.3
+  test: ^1.6.1
 
 flutter:
   uses-material-design: true
