--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_advanced_networkimage: ^0.4.15
   flutter_bloc: ^0.14.0
+  outline_material_icons: ^0.1.0
   photo_view: ^0.3.3
   rxdart: ^0.22.0
 
