--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^0.14.0
   outline_material_icons: ^0.1.0
   photo_view: ^0.3.3
+  provider: ^2.0.1
   rxdart: ^0.22.0
 
 dev_dependencies:
