--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,22 +8,22 @@ environment:
 dependencies:
   bloc: ^0.14.1
   built_collection: ^4.2.2
-  built_value: ^6.5.0
+  built_value: ^6.6.0
   cupertino_icons: ^0.1.2
-  dio: ^2.1.5
-  equatable: ^0.2.4
+  dio: ^2.1.7
+  equatable: ^0.2.6
   flutter:
     sdk: flutter
   flutter_advanced_networkimage: ^0.4.15
-  flutter_bloc: ^0.14.0
+  flutter_bloc: ^0.15.1
   outline_material_icons: ^0.1.0
   photo_view: ^0.3.3
-  provider: ^2.0.1
+  provider: ^2.0.1+1
   rxdart: ^0.22.0
 
 dev_dependencies:
-  build_runner: ^1.4.0
-  built_value_generator: ^6.5.0
+  build_runner: ^1.5.0
+  built_value_generator: ^6.6.0
   flutter_test:
     sdk: flutter
   test: ^1.6.1
