--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   flutter_advanced_networkimage: ^0.4.15
   flutter_bloc: ^0.15.1
+  image_picker_saver: ^0.3.0
   outline_material_icons: ^0.1.0
   photo_view: ^0.3.3
   provider: ^2.0.1+1
